<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BackgroundDark"
    tools:context="mobile.rasmussen.edu.geocache.TreasureActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TreasureTitle"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:background="@color/BackgroundLight"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Hint"
        android:textSize="20sp"
        android:layout_below="@+id/TreasureTitle"
        android:background="@color/BackgroundLight"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PointsView"
        android:textSize="20sp"
        android:text="@string/Points"
        android:layout_below="@+id/AnswerWhat"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AnswerWhere"
        android:hint="@string/StringAnswerWhere"
        android:textSize="20sp"
        android:layout_below="@+id/Hint"
        android:background="@color/BackgroundLight"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AnswerWhat"
        android:hint="@string/StringAnswerWhat"
        android:textSize="20sp"
        android:layout_below="@+id/AnswerWhere"
        android:background="@color/BackgroundLight"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonSubmit"
        android:text="@string/StringSubmit"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/AnswerWhat"
        android:layout_alignEnd="@+id/AnswerWhat"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonHint"
        android:text="@string/StringHint"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/ButtonSubmit"
        android:layout_alignStart="@+id/ButtonSubmit"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonHome"
        android:text="@string/StringHome"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/ButtonHint"
        android:layout_alignStart="@+id/ButtonHint"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textMe"
        android:text="@string/StringText"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/ButtonSubmit"
        android:layout_alignParentStart="true" />

</RelativeLayout>
